# lalia

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  recreate_hatch_env.sh
src/lalia/: formatting.py  functions.py  notes.org
src/lalia/chat/: completions.py  dispatcher.py  dispatchers.py  finish_reason.py  messages.py  roles.py  session.py
src/lalia/chat/messages/: __init__.py  buffer.py  fold_state.py  folds.py  messages.py  tags.py
src/lalia/formatting/: __init__.py  templates.py
src/lalia/functions/: __init__.py  types.py  utils.py
src/lalia/io/: logging.py  parsers.py  progress.py  renderers.py  storage.py
src/lalia/io/models/: openai.py
src/lalia/io/progress/: __init__.py  session.py
src/lalia/io/serialization/: __init__.py  functions.py  json_schema.py
src/lalia/llm/: __init__.py  llm.py  models.py  openai.py
src/lalia/llm/budgeting/: budgeter.py  token_counter.py
src/lalia/utils/: decorators.py
talk/: README.org
talk/examples/: basic.py  dispatcher.py  elon.py  parser.py
tests/: conftest.py  test dispatcher_protocol.py  test_lalia.py  test_parsers.py
tests/dispatchers/: test_sequential_dispatcher.py
tests/functions/: test_functions.py
tests/io/: test_logging.py
tests/io/json_schema/conversion/: conftest.py  test_class_schema.py  test_conversion.py  test_custom_schema.py
tests/io/json_schema/props/: test_array.py  test_boolean.py  test_integer.py  test_invalid_prop_data.py  test_null.py  test_number.py  test_object.py  test_string.py
tests/lalia/messages/: test_folding.py  test_tags.py
tests/llm/: conftest.py  test_functional.py  test_llm.py
tests/llm/budgeting/: conftest.py  test_budgeter.py  test_budgeter_function.py  test_encoder.py  test_function_formatting.py  test_token_counting.py
tests/messages/: conftest.py  test_folding.py  test_tags.py
tests/parsers/: test_parsers.py
